# midi-to-chord

./: pyproject.toml  test.py
test/: Duck Parade.lab  Duck Parade.midi
